tests/specs/interface_readonly_index_signature.txt
# mod.ts
export interface Interface {
  readonly [index: number]: Interface;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface Interface {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   readonly [index: number]: Interface;
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

interface Interface

  readonly [index: number]: Interface


# output.json
[
  {
    "name": "Interface",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "interface",
    "interfaceDef": {
      "extends": [],
      "constructors": [],
      "methods": [],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [
        {
          "readonly": true,
          "params": [
            {
              "kind": "identifier",
              "name": "index",
              "optional": false,
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "keyword": "number"
              }
            }
          ],
          "tsType": {
            "repr": "Interface",
            "kind": "typeRef",
            "typeRef": {
              "typeParams": null,
              "typeName": "Interface"
            }
          },
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 31
          }
        }
      ],
      "typeParams": []
    }
  }
]
